objects/OF_CommercialElementIstanziato__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Verticale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Verticale</label>
        <referenceTo>OF_Asset_Verticale__c</referenceTo>
        <relationshipLabel>Commercial element istanziati</relationshipLabel>
        <relationshipName>Commercial_element_istanziati</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CAUSALE_APPARATO__c</fullName>
        <label>CAUSALE_APPARATO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cardinalita_Scala__c</fullName>
        <formula>Asset_Verticale__r.Cardinalita_Scala__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cardinalita Scala</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Civico__c</fullName>
        <formula>Asset_Verticale__r.Civico__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Civico</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_IAV__c</fullName>
        <label>Code_IAV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comune__c</fullName>
        <formula>Asset_Verticale__r.Comune__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comune</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descrizione_IAV__c</fullName>
        <label>Descrizione IAV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fibra_1_Destinazione__c</fullName>
        <label>Fibra 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fibra_1_Partenza__c</fullName>
        <label>Fibra 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fibra_2_Destinazione__c</fullName>
        <label>Fibra 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fibra_2_Partenza__c</fullName>
        <label>Fibra 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_DB_Building__c</fullName>
        <formula>Asset_Verticale__r.ID_DB_Building__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID DB Building</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_DB_Scala_Palazzina__c</fullName>
        <formula>Asset_Verticale__r.ID_DB_Scala_Palazzina__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID DB Scala Palazzina</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_GIS_Scala_Palazzina__c</fullName>
        <formula>Asset_Verticale__r.ID_GIS_Scala_Palazzina__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID GIS Scala Palazzina</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo__c</fullName>
        <formula>Asset_Verticale__r.Indirizzo__c</formula>
        <label>Indirizzo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_AssetTratta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Tratte</relationshipLabel>
        <relationshipName>Commercial_element_istanziati6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Commercial element istanziati</relationshipLabel>
        <relationshipName>Commercial_element_istanziati</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Attenuazione__c</fullName>
        <label>Attenuazione</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_AzioneApparato__c</fullName>
        <label>Azione apparato</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_BillingSyncronized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF_BillingSyncronized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_CEStandard__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup utilizzata nel process builder Filter related list commercial element per creare le related list sotto l&apos;asset corrette</description>
        <label>CE Standard</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Commercial elements</relationshipLabel>
        <relationshipName>Commercial_element_istanziati4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CODICEMOTIVAZIONE_SERVIZIO__c</fullName>
        <label>Codice Motivazione Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CPEPassivi__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup utilizzata nel process builder Filter related list commercial element per creare le related list sotto l&apos;asset corrette</description>
        <label>CPEp</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>CPE</relationshipLabel>
        <relationshipName>Commercial_element_istanziati5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CPE_Quantity__c</fullName>
        <label>OF CPE Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CPE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup utilizzata nel process builder Filter related list commercial element per creare le related list sotto l&apos;asset corrette</description>
        <label>CPE</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>CPE</relationshipLabel>
        <relationshipName>Commercial_element_istanziati3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CaseTratta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Tratte</relationshipLabel>
        <relationshipName>Commercial_element_istanziati1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Commercial element istanziati</relationshipLabel>
        <relationshipName>Commercial_element_istanziati</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_ClusterPromozione__c</fullName>
        <formula>OF_Case__r.OF_SA_Cluster_Promozione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cluster Promozione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CodiceMotivazioneConsegna__c</fullName>
        <label>Codice motivazione consegna</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CodiceMotivazioneRitiro__c</fullName>
        <label>Codice motivazione ritiro</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CodiceProgettoSpeciale__c</fullName>
        <formula>OF_Case__r.OF_SA_CODICE_PROGETTO_SPECIALE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Codice Progetto Speciale</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CommercialElementName__c</fullName>
        <formula>OF_CommercialElement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial element name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CommercialElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial element</label>
        <referenceTo>OF_CommercialElement__c</referenceTo>
        <relationshipLabel>Commercial element istanziati</relationshipLabel>
        <relationshipName>Commercial_element_istanziati</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_CustomerVLAN__c</fullName>
        <label>Customer-VLAN</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_DDT__c</fullName>
        <label>DDT</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_DataAttivazione_Calc__c</fullName>
        <formula>OF_DataAttivazione__c + (1/24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DataAttivazione_Calc</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataAttivazione__c</fullName>
        <label>Data attivazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataCessazione__c</fullName>
        <label>Data cessazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataRiattivazione__c</fullName>
        <label>Data riattivazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_DataSospensione__c</fullName>
        <label>Data sospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_Data_Desospensione__c</fullName>
        <label>Data Desospensione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OF_ESITOSERVIZIO__c</fullName>
        <label>Esito Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_EsitoConsegnaApparato1__c</fullName>
        <formula>OF_Case__r.OF_Esito_Consegna_Apparato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Esito consegna apparato</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_EsitoConsegnaApparato__c</fullName>
        <label>Esito consegna apparato</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_EsitoRitiroApparato__c</fullName>
        <label>Esito ritiro apparato</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_EsitoRitiro__c</fullName>
        <label>Esito ritiro</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDAPPARATOCONSEGNATO__c</fullName>
        <label>ID Apparato Consegnato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDApparatoConsegnato1__c</fullName>
        <formula>OF_Case__r.EOF_ID_Apparato_Consegnato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ID Apparato Consegnato</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDOrdine__c</fullName>
        <label>ID Ordine</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_IDRisorsa__c</fullName>
        <label>ID Risorsa</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ID_Apparato__c</fullName>
        <label>ID Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Indirizzo_Destinazione__c</fullName>
        <formula>OF_CaseTratta__r.PO_Indirizzo_collegamento__c+&apos; &apos;+ OF_CaseTratta__r.PO_Civico__c + &apos;, &apos; + OF_CaseTratta__r.PO_Nome_Comune__c</formula>
        <label>Indirizzo Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_InformazioniVLAN__c</fullName>
        <label>Informazioni VLAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Informazioni_Servizio__c</fullName>
        <label>Informazioni Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_KitConsegnaVLAN__c</fullName>
        <label>Kit consegna VLAN</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_LunghezzaOttica__c</fullName>
        <label>Lunghezza Ottica (m)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OF_MOTIVAZIONESERVIZIO__c</fullName>
        <label>Motivazione Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ModelloDiServizioVLAN__c</fullName>
        <label>Modello di servizio VLAN</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_MotivazioneConsegna__c</fullName>
        <label>Motivazione consegna</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_MotivazioneRitiro__c</fullName>
        <label>Motivazione ritiro</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Nome_Servizio__c</fullName>
        <label>Nome Servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_PasswordApparato1__c</fullName>
        <formula>OF_Case__r.EOF_Password_Apparato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Password apparato</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Password_Apparato__c</fullName>
        <label>Password Apparato</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_PosizioneRIlascioCircuitoOSU__c</fullName>
        <label>Posizione Rilascio Circuito OSU</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ProfiloVLAN__c</fullName>
        <label>Profilo VLAN</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Profilo__c</fullName>
        <formula>OF_Case__r.OF_SA_Profilo__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Profilo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Promozione__c</fullName>
        <formula>OF_Case__r.OF_SA_Promozione__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promozione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_SA_CPE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CPE</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>CPE</relationshipLabel>
        <relationshipName>CPE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_SA_Servizio_Aggiuntivo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servizio Aggiuntivo</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Servizio Aggiuntivo</relationshipLabel>
        <relationshipName>Servizio_Aggiuntivo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_SA_VLAN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>VLan</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>VLan</relationshipLabel>
        <relationshipName>VLan</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_ServiceVLAN__c</fullName>
        <label>Service-VLAN</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ServiziAggiuntivi__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup utilizzata nel process builder Filter related list commercial element per creare le related list sotto l&apos;asset corrette</description>
        <label>Servizi aggiuntivi</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Servizi aggiuntivi</relationshipLabel>
        <relationshipName>Commercial_element_istanziati2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Stato__c</fullName>
        <label>Stato</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attivo</fullName>
                </value>
                <value>
                    <fullName>Cessato</fullName>
                </value>
                <value>
                    <fullName>Sospeso</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OF_TT_Number__c</fullName>
        <label>OF_TT_Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TipologiaApparato1__c</fullName>
        <formula>OF_Case__r.EOF_Tipologia_Apparato__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipologia apparato</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TipologiaApparato__c</fullName>
        <label>Tipologia apparato</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_UserVLAN__c</fullName>
        <label>User-VLAN</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_VLAN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup utilizzata nel process builder Filter related list commercial element per creare le related list sotto l&apos;asset corrette</description>
        <label>VLAN</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>VLAN</relationshipLabel>
        <relationshipName>Commercial_element_istanziati1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OLO_Comm_Code__c</fullName>
        <label>OLO_Comm_Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Case_ordine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo di lookup per legare la VLAN anche al Case Ordine nella P2P Attiva</description>
        <label>Case ordine</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Vlan Ordine</relationshipLabel>
        <relationshipName>Commercial_element_istanziati2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_Indirizzo_Partenza__c</fullName>
        <formula>OF_CaseTratta__r.PO_Indirizzo_collegamento_partenza__c +&apos; &apos; +  OF_CaseTratta__r.PO_Civico_partenza__c + &apos;, &apos; + OF_CaseTratta__r.PO_Nome_Comune__c</formula>
        <label>Indirizzo Sede 1 di Terminazione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Log_Ordine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Log Ordine</label>
        <referenceTo>EOF_EAI_Service_Log__c</referenceTo>
        <relationshipLabel>Commercial element istanziati</relationshipLabel>
        <relationshipName>Commercial_element_istanziati</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PO_PP_Banda_Interfaccia__c</fullName>
        <label>Banda</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_Cos_Class__c</fullName>
        <label>Cos Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_Cos_Type__c</fullName>
        <label>Cos Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_Cos_remarking__c</fullName>
        <label>Cos_Remarking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_DHCP_Option82__c</fullName>
        <label>Dhcp Option 82</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_InterfacciaKit__c</fullName>
        <label>Interfaccia</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 Giga</fullName>
                </value>
                <value>
                    <fullName>10 Giga</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_PP_Modello_Servizio__c</fullName>
        <label>Modello di servizio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_Nome_KIT__c</fullName>
        <label>Nome KIT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_Note__c</fullName>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_PP_POP_SVLAN__c</fullName>
        <label>POP di raccolta</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_Pop__c</fullName>
        <label>POP di consegna</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_Posizione_ODF__c</fullName>
        <label>Posizione ODF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_Servizi_Utenti_Finali__c</fullName>
        <label>Servizi per utenti finali</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_PP_Servizio_Commerciale__c</fullName>
        <label>Servizio Commerciale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VULA Openstream Direct</fullName>
                </value>
                <value>
                    <fullName>VULA Openstream City Edge</fullName>
                </value>
                <value>
                    <fullName>BITSTREAM - Openstream Regional</fullName>
                </value>
                <value>
                    <fullName>VULA</fullName>
                </value>
                <value>
                    <fullName>VULA Direct</fullName>
                </value>
                <value>
                    <fullName>BITSTREAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Particella_Toponomastica__c</fullName>
        <formula>Asset_Verticale__r.Particella_Toponomastica__c</formula>
        <label>Particella Toponomastica</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia__c</fullName>
        <formula>Asset_Verticale__r.Provincia__c</formula>
        <label>Provincia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UI_Scala_Palazzina__c</fullName>
        <formula>Asset_Verticale__r.UI_Scala_Palazzina__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UI Scala Palazzina</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UpdateBilling__c</fullName>
        <defaultValue>true</defaultValue>
        <label>UpdateBilling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isLaborato__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isLaborato</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>metriTot__c</fullName>
        <label>metriTot</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>metriTot_c__c</fullName>
        <label>metriTot</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Commercial element istanziato</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CEI-{00000}</displayFormat>
        <label>Commercial element istanziato Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial element istanziati</pluralLabel>
    <recordTypes>
        <fullName>CPE_Passivi</fullName>
        <active>true</active>
        <label>CPE Passivi</label>
    </recordTypes>
    <recordTypes>
        <fullName>Intervento_a_vuoto</fullName>
        <active>true</active>
        <label>Intervento a vuoto</label>
    </recordTypes>
    <recordTypes>
        <fullName>KIT</fullName>
        <active>true</active>
        <label>KIT</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_CPE</fullName>
        <active>true</active>
        <label>CPE</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_INTERVENTO_DI_MANUTENZIONE</fullName>
        <active>true</active>
        <label>OF INTERVENTO DI MANUTENZIONE</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_ServiziAggiuntivi</fullName>
        <active>true</active>
        <label>Servizi Aggiuntivi</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_VLAN</fullName>
        <active>true</active>
        <label>VLAN</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Portalino</fullName>
        <active>true</active>
        <label>Portalino</label>
    </recordTypes>
    <recordTypes>
        <fullName>SVLAN</fullName>
        <active>true</active>
        <label>SVLAN</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tratte</fullName>
        <active>true</active>
        <label>Tratte</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tratte_P2P</fullName>
        <active>true</active>
        <label>Tratte P2P</label>
    </recordTypes>
    <recordTypes>
        <fullName>Verticale</fullName>
        <active>true</active>
        <label>Verticale</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>isVerticaleUPD</fullName>
        <active>true</active>
        <errorConditionFormula>and ( 
OF_CommercialElementName__c=&apos;Servizio Verticale&apos;, 
$User.LastName!=&apos;Integration Verticali&apos;,
$User.Email !=&apos;francesco.casali1@enel.com&apos;,
$User.Email !=&apos;cinzia.orlando@enel.com&apos;,
$User.LastName!=&apos;Atos2&apos;
)</errorConditionFormula>
        <errorMessage>Solo un processo verticale può modificare questo record</errorMessage>
    </validationRules>
</CustomObject>